finalize slider grading

--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -351,7 +351,7 @@
     .slider {
       width: 100%;
       height: 6px;
-      background: linear-gradient(90deg, #3B82F6, #2D3748);
+      background: linear-gradient(90deg, #2D3748, #3B82F6);
       border-radius: 3px;
       outline: none;
       -webkit-appearance: none;
@@ -604,7 +604,7 @@
             <span id="spkHighShelfMinLabel">-6 dB</span>
           </div>
           <div class="tooltip-container">
-            <input type="range" id="spkHighShelfMin" class="slider" min="-10" max="0" step="1" value="-6">
+            <input type="range" id="spkHighShelfMin" class="slider" min="-10" max="0" step="1" value="-6" style="background: linear-gradient(-90deg, #2D3748, #3B82F6);">
             <div class="tooltip">Speaker minimum high-shelf filter</div>
           </div>
         </div>
@@ -652,7 +652,7 @@
             <span id="subLowShelfMinLabel">-6 dB</span>
           </div>
           <div class="tooltip-container">
-            <input type="range" id="subLowShelfMin" class="slider" min="-10" max="0" step="1" value="-6">
+            <input type="range" id="subLowShelfMin" class="slider" min="-10" max="0" step="1" value="-6" style="background: linear-gradient(-90deg, #2D3748, #3B82F6);">
             <div class="tooltip">Subwoofer minimum low-shelf filter</div>
           </div>
         </div>
