--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -2443,7 +2443,23 @@
       }
       return Math.max(rolloff, start);
     }
-    async function getHFRolloff(idx, start=10000, end=20000) {
+    async function getSubwooferLFRolloff(idx, start=10, end=320) {
+      // goal of this function is to find the subwoofer roll-off point within which low shelf can work
+      const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
+      const rpArray = response2array(response, start, end);
+      const tcArray = response2array(targetResponse, start, end);
+      const arrLength = Math.min(rpArray.length, tcArray.length);
+      const octave = Math.pow(2, 1/96);
+      let rolloff = start;
+      for (let i = 0; i < arrLength; i++) {
+        if ((rpArray[i] - tcArray[i]) >= -subwooferLowShelfMax) {
+          break;
+        }
+        rolloff *= octave;
+      }
+      return Math.min(rolloff, end);
+    }
+    async function getSpeakerHFRolloff(idx, start=10000, end=20000) {
       // goal of this function is to find the roll-off past 10k before any HF peaks that can mess with the high shelf
       const response = await fetchSafe('frequency-response?smoothing=1%2F6&ppo=96', idx);
       const rpArray = response2array(response, start, end);
@@ -2459,8 +2475,8 @@
           rolloff = checkFreq;
         }
         // if HF peak exceeds lowest point by 3dB, set roll-off before that peak
-        // also if HF drops below target by 3dB, stop there otherwise high shelf will fail
-        if ((rpArray[i] - lowestSPL >= 3) || (rpArray[i] - tcArray[i] <= -3)) {
+        // also if HF drops below target by max speaker high shelf, stop there otherwise high shelf will fail
+        if ((rpArray[i] - lowestSPL >= 3) || (rpArray[i] - tcArray[i] <= -speakerHighShelfMax)) {
           break;
         }
         checkFreq *= octave;
@@ -2490,7 +2506,7 @@
         customCrossover[i] = initialXO;
         // used for EQ limits
         const rolloffLF = await getAbsLow3dBPoint(spIdx, false); // speaker specific, not pair specific
-        const rolloffHF = await getHFRolloff(spIdx); // speaker specific, not pair specific
+        const rolloffHF = await getSpeakerHFRolloff(spIdx); // speaker specific, not pair specific
         m3dBPoints[i] = [Math.round(rolloffLF), Math.round(rolloffHF)];
         if (!singleChannel) {
           // assign initialXO to the right channel of the speaker pair
@@ -2499,7 +2515,7 @@
           // used for EQ limits
           const spIdxR = cmdIdAVGIndices[commandId[i + 1]]
           const rolloffLFR = await getAbsLow3dBPoint(spIdxR, false); // speaker specific, not pair specific
-          const rolloffHFR = await getHFRolloff(spIdxR); // speaker specific, not pair specific
+          const rolloffHFR = await getSpeakerHFRolloff(spIdxR); // speaker specific, not pair specific
           m3dBPoints[i + 1] = [Math.round(rolloffLFR), Math.round(rolloffHFR)];
           i++;
         }
@@ -2512,6 +2528,7 @@
       console.log("Calculating subwoofer -3dB points...")
       // find low freq -3dB point & set minXO
       const subLowFreq = await getAbsLow3dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
+      const subLowFreqExt = await getSubwooferLFRolloff(cmdIdAVGIndices[commandId[nChannels]]); // used for EQ
       minXO = findNearestXO(2 * subLowFreq);
       // find high freq -3dB point and set maxXO
       const subHighFreq = await getAbsHigh3dBPoint(cmdIdAVGIndices[commandId[nChannels]]);
@@ -2520,7 +2537,7 @@
         minXO = maxXO;
         console.warn(`Subwoofer has very little bandwidth and can only support ${minXO}hz crossover!`);
       }
-      m3dBPoints[nChannels] = [Math.round(subLowFreq), Math.round(subHighFreq)];
+      m3dBPoints[nChannels] = [Math.round(subLowFreqExt), Math.round(subHighFreq)];
       Object.freeze(minXO);
       Object.freeze(maxXO);
       console.info(`${commandId[nChannels].padStart(3, ".")} bandwidth: ${subLowFreq.toFixed(2)}hz - ${subHighFreq.toFixed(2)}hz → Usable XO range: ${minXO}hz - ${maxXO}hz`);
