--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -600,28 +600,6 @@
       <div class="slider-row">
         <div class="slider-half">
           <div class="slider-label">
-            <span>Speaker Min Low-shelf</span>
-            <span id="spkLowShelfMinLabel">-3 dB</span>
-          </div>
-          <div class="tooltip-container">
-            <input type="range" id="spkLowShelfMin" class="slider" min="-10" max="0" step="1" value="-3" style="background: linear-gradient(-90deg, #2D3748, #3B82F6);">
-            <div class="tooltip">Speaker minimum low-shelf filter</div>
-          </div>
-        </div>
-        <div class="slider-half">
-          <div class="slider-label">
-            <span>Speaker Max Low-shelf</span>
-            <span id="spkLowShelfMaxLabel">3 dB</span>
-          </div>
-          <div class="tooltip-container">
-            <input type="range" id="spkLowShelfMax" class="slider" min="0" max="10" step="1" value="3">
-            <div class="tooltip">Speaker maximum low-shelf filter</div>
-          </div>
-        </div>
-      </div>
-      <div class="slider-row">
-        <div class="slider-half">
-          <div class="slider-label">
             <span>Speaker Min High-shelf</span>
             <span id="spkHighShelfMinLabel">-6 dB</span>
           </div>
@@ -753,7 +731,7 @@
     const m3dBPoints = {}, cmdIdIndices = {}, cmdIdFilterIndices = {};
     const cmdIdMLPIndices = {}, cmdIdAVGIndices = {};
     const cmdIdMLPIndicesEQ = {}, cmdIdAVGIndicesEQ = {};
-    let speakerIndividualMaxBoost, speakerOverallMaxBoost, speakerLowShelfMin, speakerLowShelfMax, speakerHighShelfMin, speakerHighShelfMax;
+    let speakerIndividualMaxBoost, speakerOverallMaxBoost, speakerHighShelfMin, speakerHighShelfMax;
     let subwooferIndividualMaxBoost, subwooferOverallMaxBoost, subwooferLowShelfMin, subwooferLowShelfMax;
     // TODO: store the user inputs in variables instead of querying it from the document
     const filterTypes = [
@@ -765,8 +743,6 @@
     const sliders = [
       { id: "spkIndBoost", label: "spkIndBoostLabel", variable: "speakerIndividualMaxBoost" },
       { id: "spkOverAllBoost", label: "spkOverAllBoostLabel", variable: "speakerOverallMaxBoost" },
-      { id: "spkLowShelfMin", label: "spkLowShelfMinLabel", variable: "speakerLowShelfMin" },
-      { id: "spkLowShelfMax", label: "spkLowShelfMaxLabel", variable: "speakerLowShelfMax" },
       { id: "spkHighShelfMin", label: "spkHighShelfMinLabel", variable: "speakerHighShelfMin" },
       { id: "spkHighShelfMax", label: "spkHighShelfMaxLabel", variable: "speakerHighShelfMax" },
       { id: "subIndividualMaxBoost", label: "subIndividualMaxBoostLabel", variable: "subwooferIndividualMaxBoost" },
@@ -1676,7 +1652,6 @@
         console.warn(`  ***REW Boost Parameters***`);
         console.info(`    *Speaker*`);
         console.info(`      Individual Max Boost: ${speakerIndividualMaxBoost}dB, Overall Max Boost: ${speakerOverallMaxBoost}dB`);
-        console.info(`      Low-Shelf Min: ${speakerLowShelfMin}dB, Low-Shelf Max: ${speakerLowShelfMax}dB`);
         console.info(`      High-Shelf Min: ${speakerHighShelfMin}dB, High-Shelf Max: ${speakerHighShelfMax}dB`);
         if (!noSub) {
           console.info(`    *Subwoofer*`);
@@ -1707,10 +1682,6 @@
         Object.freeze(speakerIndividualMaxBoost);
         speakerOverallMaxBoost = window.speakerOverallMaxBoost;
         Object.freeze(speakerOverallMaxBoost);
-        speakerLowShelfMin = window.speakerLowShelfMin;
-        Object.freeze(speakerLowShelfMin);
-        speakerLowShelfMax = window.speakerLowShelfMax;
-        Object.freeze(speakerLowShelfMax);
         speakerHighShelfMin = window.speakerHighShelfMin;
         Object.freeze(speakerHighShelfMin);
         speakerHighShelfMax = window.speakerHighShelfMax;
@@ -2250,7 +2221,7 @@
         else {
           await updateEQFilterSettings(m3dBPoints[i][0], m3dBPoints[i][1],
             speakerIndividualMaxBoost, speakerOverallMaxBoost,
-            speakerLowShelfMin, speakerLowShelfMax, speakerHighShelfMin, speakerHighShelfMax);
+            0, 0, speakerHighShelfMin, speakerHighShelfMax); // no LS
         }
         try {
           await postNext('Match target', avgIdx);
