--- a/A1Evo_MJ_Custom.html
+++ b/A1Evo_MJ_Custom.html
@@ -1527,7 +1527,7 @@
       await enableBlock();
       await bootUp();
       await groundWorks();
-      await calculateSPRolloffs();
+      await calculateSpeakerRolloffs();
       await calculateSubBandwidth();
       await optimizeSubDelay();
       await finalizeXO();
@@ -2423,9 +2423,7 @@
       const octave = Math.pow(2, 1/96);
       let rolloff = start;
       for (let i = 0; i < arrLength; i++) {
-        if ((rpArray[i] - tcArray[i]) >= Math.min(-3, -subwooferLowShelfMax)) {
-          break;
-        }
+        if ((rpArray[i] - tcArray[i]) >= Math.min(-3, -subwooferLowShelfMax)) { break; }
         rolloff *= octave;
       }
       return Math.min(rolloff, end);
@@ -2447,14 +2445,12 @@
         }
         // if HF peak exceeds lowest point by 3dB, set roll-off before that peak
         // also if HF drops below target by max speaker high shelf, stop there otherwise high shelf will fail
-        if ((rpArray[i] - lowestSPL >= 3) || (rpArray[i] - tcArray[i] <= -speakerHighShelfMax)) {
-          break;
-        }
+        if ((rpArray[i] - lowestSPL >= 3) || ((rpArray[i] - tcArray[i]) <= Math.min(-3, -speakerHighShelfMax))) { break; }
         checkFreq *= octave;
       }
       return Math.min(rolloff, end);
     }
-    async function calculateSPRolloffs() {
+    async function calculateSpeakerRolloffs() {
       console.log("Calculating speaker -3dB points...");
       for (let i = 1; i <= nSpeakers; i++) {
         const spIdx = cmdIdAVGIndices[commandId[i]];
